--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Sylvester Mobley
+title: SYLVESTER MOBLEY
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Sylvester Mobley
+  Sylvester Mobley - Founder and Executive Director of Coded by Kids, CEO of Coded by U, Social Entrepreneur, Technologist
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://sylvestermobley.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
